--- a/TicTacToe/Base.lproj/Main.storyboard
+++ b/TicTacToe/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Title-->
+        <!--Tic Tac Toe-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
@@ -147,7 +147,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Title" id="fQ0-fo-LOa">
+                    <navigationItem key="navigationItem" title="Tic Tac Toe" id="fQ0-fo-LOa">
                         <barButtonItem key="rightBarButtonItem" title="Restart" id="UfQ-CX-GXz">
                             <connections>
                                 <action selector="didTapRestart:" destination="BYZ-38-t0r" id="rIx-RL-Thr"/>
